Bug 90077 - Crash after enabling media playback toolbar
Summary: Crash after enabling media playback toolbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: highest critical
Assignee: Noel Grandin
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta4
Keywords: bibisected, bisected, regression
: 91679 (view as bug list)
Depends on:
Blocks: mab5.0
  Show dependency treegraph
 
Reported: 2015-03-18 00:26 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:21 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-03-18 00:26:39 UTC
Steps:
1) Open impress
2) View > Toolbars > Media Playback

This is a regression as this doesnt happen with 4.4 daily.

Version: 4.5.0.0.alpha0+
Build ID: de145fb467f2a168261915d63b47d3cd3b03d732
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-03-15_09:51:29
Comment 1 Matthew Francis 2015-03-18 02:48:29 UTC
Specifically, I see a hang rather than a crash. It starts at
  2015-03-07: source-hash-333f8a76341f5b4921e89012d133007503e49612
in the 4.5 dbgutil bibisect tree

The recent idle/timer work landed in that range, and I don't see anything else obvious, so it seems plausible that this could be fallout from that.
(The toolbar contains elements which look like they should update on timers, so maybe that's why?)

Adding Cc: to tobias.madl.dev@gmail.com; Could you possibly take a look at this one? Thanks
Comment 2 Matthew Francis 2015-03-19 10:45:08 UTC
Setting -> NEW as already confirmed
Comment 3 Matthew Francis 2015-04-13 10:31:43 UTC
Somewhere in the range
 9e678c14e4fc8e58b1e0530744f648fa3958d338^1..d05a64df34fd143670cb939b72abfb32d6b714c7

(not individually buildable)
Comment 4 Jorendc 2015-05-31 18:35:01 UTC
Still reproducible, Windows 7 x64 and LibreOffice Version: 5.1.0.0.alpha1+
Build ID: 6a626955eb8b803fa58a58baafaa2a06ab4761f2
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-30_07:46:48
Locale: nl-BE (nl_BE)
Comment 5 Commit Notification 2015-06-10 15:00:58 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a5323655355a01be582a556a99e410c4064ebe4

tdf#90077 fix freeze when enabling media toolbar in Impress

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-06-11 07:23:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b75bda81c1eafeb9ff7e3dc5cfa4830c5da017c9&h=libreoffice-5-0

tdf#90077 fix freeze when enabling media toolbar in Impress

It will be available in 5.0.0.0.beta4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Matthew Francis 2015-08-20 10:09:40 UTC
*** Bug 91679 has been marked as a duplicate of this bug. ***
Comment 8 Robinson Tryon (qubit) 2015-12-17 08:49:21 UTC Comment hidden (obsolete)