tdf#90077 fix freeze when enabling media toolbar in Impress

Change-Id: I402bd7319d31859510a06644eb7dc786d56b312e